hphp/test/slow/password/invalid_algo.php.expectf

Fatal error: Argument 2 passed to password_hash() must be an instance of int, array given in %s/test/slow/password/invalid_algo.php on line 2
